--- a/nmapscancwithcsharp-main/siberguvenlik_vize/siberguvenlik_vize/siberguvenlik_vize.csproj
+++ b/nmapscancwithcsharp-main/siberguvenlik_vize/siberguvenlik_vize/siberguvenlik_vize.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NEST" Version="7.17.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
